--- a/TODOs.org
+++ b/TODOs.org
@@ -20,7 +20,7 @@ child
 * TODO show number of child comments
 https://emacs.stackexchange.com/questions/10245/counting-sub-headings-in-org-mode-using-elisp
 or recursive on dom will be just fine
-* TODO run eslip on org link
+* DONE run eslip on org link
 
 #+begin_example org-mode
 [[elisp:(find-function 'describe-function)]]
@@ -28,4 +28,8 @@ or recursive on dom will be just fine
 
 [[elisp:(hnreader-comment 20724363)][read]
 
-* TODO comment page show main link and intro text
+      ;; (setq-local org-confirm-elisp-link-function nil)
+      
+* DONE comment page show main link and intro text
+* TODO display page takes page number
+* TODO reload page
