nav bar on listing pages

--- a/TODOs.org
+++ b/TODOs.org
@@ -112,3 +112,5 @@ use pop-to-buffer isn't what we want, pop-to-buffer-same-window looks the same
 as switch-to-buffer display-buffer returns windows most of the time, so use it
 instead with select-window
         (select-window (display-buffer buf '(display-buffer-use-some-window)))
+* DONE add header
+in list pages
