--- a/README.org
+++ b/README.org
@@ -23,6 +23,8 @@ comment, downvote or upvote.
 
 * Install
 Manual: TBD
+Melpa
+[[https://melpa.org/#/hnreader][file:https://melpa.org/packages/hnreader-badge.svg]]
 
 Spacemacs layer:
 
