--- a/TODOs.org
+++ b/TODOs.org
@@ -114,3 +114,10 @@ instead with select-window
         (select-window (display-buffer buf '(display-buffer-use-some-window)))
 * DONE add header
 in list pages
+* DONE comment to open comment page
+CLOSED: [2020-03-21 Sat 12:34]
+(hnreader-read-item "https://news.ycombinator.com/item?id=22603129")
+extract id then pass to hnreader-comment
+* DONE add function to insert hn item to org buffer
+CLOSED: [2020-03-21 Sat 12:48]
+[[elisp:(hnreader-comment 1)][https://news.ycombinator.com/item?id=1]]
