--- a/TODOs.org
+++ b/TODOs.org
@@ -135,3 +135,5 @@ just show the links, reply only shows for live discussion
 with browser the commtext span includes the reply while with wget they are sibling
 * inconsistent new lines
 the first paragraph is a span, next one is a p. So if comments has only one paragraph it will not be appended with a new line char
+
+shr is can handle this problem, append and empty p node to the dom and let it shr deal with it
